# backlog-tracker

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run.py  setup.cfg
alembic/: env.py
app/: main.py
services/backend/: .env_example  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
services/backend/alembic/: env.py
services/backend/alembic/versions/: 8756aba26493_add_password.py  8b979a32ad09_make_username_and_email_unique.py  8ec94514d842_add_tags_and_game.py  a4625423fdb2_add_tags_and_game.py  b92089b1f5f2_add_password.py  bdcb96007780_1.py  c74770a59a17_rename_user_to_username.py
services/backend/backlog_tracker/: app.py  settings.py
services/backend/backlog_tracker/auth/: jwthandler.py
services/backend/backlog_tracker/auth/controllers/: auth_user.py  password.py
services/backend/backlog_tracker/controllers/: user.py
services/backend/backlog_tracker/db/: base.py  session.py
services/backend/backlog_tracker/models/: game_backlog.py  user.py
services/backend/backlog_tracker/routers/: index.py  users.py
services/backend/backlog_tracker/schemas/: abstract_backlog.py
services/backend/src/: __init__.py  database.py  main.py  models.py  settings.py
services/backend/src/auth/: routers.py  service.py  utils.py
services/backend/src/games/: models.py  models.py.py
services/backend/src/tags/: models.py
services/backend/src/users/: models.py  routers.py  schemas.py  service.py
services/backend/tests/: conftest.py
services/backend/tests/test_routers/: test_index.py  test_users.py
(+37 files in other folders)
