[tool.poetry]
name = "backlog-tracker"
version = "0.1.0"
description = "Track your backlog"
authors = ["Artyom Kropp <artyomkropp@gmail.com>"]
packages = [{include = "backlog_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.88.0"
SQLAlchemy = "^1.4.44"
alembic = "^1.8.1"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"
bcrypt = "^4.0.1"
psycopg2-binary = "^2.9.5"
pydantic = {extras = ["email"], version = "^1.10.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
